--- a/index.html
+++ b/index.html
@@ -38,9 +38,52 @@
       <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-
-        <header class="header">
+      <div class="container">
+          <header class="main-header">
+            <div class="logo">
+              <h1 class="title">
+                <a href="#"><img src="assets/img/logo.jpg" alt="logo"/>
+                  <p><span class="blue_title">MUSÉE OCEANOGRAPHIQUE</span><br/>de Baden-Baden<p>
+                </a>
+              </h1>
+            </div>
+            <div class="lang">
+              <a href="#"><img src="assets/img/fr.png" alt="fr"></a>
+              <a href="#"><img src="assets/img/de.png" alt="de"></a>
+            </div>
+          <nav class="large-screen">
+            <ul id="menu-deroulant">
+              <li ><a href="#">Le musée</a></li>
+              <li ><a href="#">Animation</a></li>
+              <li ><a href="#">Actualité</a></li>
+              <li ><a href="#">Boutique</a></li>
+              <li ><a href="#">Préparez votre visite</a>
+                <ul>
+                  <li><a href="#">ACCES </a></li>
+                  <li><a href="#">HORAIRES</a></li>
+                  <li><a href="#">TARIFS</a></li>
+                  <li><a href="#">RESTAURANT</a></li>
+                  <li><a href="#">BOUTIQUE</a></li>
+                  </ul>
+                </li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+          <nav class="small-screen">
+            <ul id="menu-deroulant">
+              <li>AFFICHER LE MENU
+                <ul>
+                  <li ><a href="#">Le musée</a></li>
+                  <li ><a href="#">Animation</a></li>
+                  <li ><a href="#">Actualité</a></li>
+                  <li ><a href="#">Boutique</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
         </header>
+      </div>
 
         <main>
             <article>
